🐛 fix(course-class-grade): Grade info overflow

--- a/src/css/courseClassGrade.css
+++ b/src/css/courseClassGrade.css
@@ -259,3 +259,14 @@
     color: var(--c-text);
     font-family: sans-serif;
 }
+
+#grades_wrapper > div {
+    position: relative;
+}
+
+#grades_wrapper .itemStats {
+    position: absolute;
+    top: 0;
+    right: 0px;
+    padding: 5px;
+}
